2005-06-17  Julio M. Merino Vidal <jmmv84@gmail.com>

	* docs/C/gdm.xml: Fix duplicate entity ID so that the
	  document validates correctly.  Fixes bug #308048.

2005-06-15  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmXnestchooser.c, gui/gdmcomm.c, 
	  gui/gdmflexiserver.c, gui/gdmphotosetup.c, 
	  gui/gdmwm.c:  Fix leaks.  Addresses bug 
	  #307482.  Patch provided by Kjartan Maraas.
	* gui/modules/dwellmouselistener.c, 
	  gui/modules/keymouselistener.c:  Remove
	  needless "\n" from syslog calls.

2005-06-15  Brian Cameron  <brian.cameron@sun.com>

	* gui/modules/dwellmouselistener.c, 
	  gui/modules/keymouselistener.c:  Now log messages to 
	  syslog since you can't see messages printed to
	  stdout/stderr when running under gdm2.  Now only 
	  print messages if GDM_DEBUG_GESTURES environment
	  variable is set to TRUE.  Cleaned up the code so it
	  is more readible.  No longer modify PATH since
	  gdm2 now puts full path to executables in the
	  gesture listener config files.  More secure.

2005-06-13  Brian Cameron  <brian.cameron@sun.com>

	* vicious-extensions/ve-gnome.c:  Remove reference
	  to libgnome.  The daemon should not depend on libgnome.
	  Patch provided by Andrew Case.  Fix for bug #117889.

2005-06-11  Juerg Billeter  <j@bitron.ch>

	* configure.in: Use ksh on solaris only.  Fixes bug
	  #307250.

2005-06-10  Brian Cameron  <brian.cameron@sun.com>

	* Release 2.8.0.0
	* configure.in: Updated version
	* News: Updated
	* gui/Makefile.am: Fixed so faces subdir gets distributed.
	* gui/faces/Makefile.am: Fixed so faces subdir builds with
	  distcheck.

2005-06-10  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmsetup-strings.c, gui/gdmsetup.c, 
	  gui/gdmsetup.glade:  Removed "No Image" button
	  for setting the background since it is redundant.
	  You can also say "no background" on the radio
	  button list.

2005-06-10  Brian Cameron  <brian.cameron@sun.com>

	* config/gdm.conf.in: Updated setting for gdmsetup,