@@ -1,3 +1,8 @@
+2005-06-17  Brian Cameron  <brian.cameron@sun.com>
+
+	* gui/gdmsetup.c:  Fix Delete button sensitivity.
+	  Fixes part of bug #302354.  Patch by Andrew Case.
+
 2005-06-17  Julio M. Merino Vidal <jmmv84@gmail.com>
 
 	* docs/C/gdm.xml: Fix duplicate entity ID so that the
